<resources>
    <string name="app_name">Fragments</string>
    <string name="fragment1_text">Fragment 1</string>
    <string name="fragment2_text">Fragment 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ou_1">\'это фрагменты\'</string>
    <string name="add">добавить</string>
    <string name="remove">изменить</string>
    <string name="replace">заменять</string>
    <string name="stack">добавить в стэк</string>
    <string name="settings">натсройки</string>
    <string name="note1">заметка1</string>
    <string name="noteName">Книга заметок</string>
    <string name="note2">заметка2</string>
    <string name="save">сохранить</string>
    <string name="date">дата замтки</string>
    <string name="save_2">сохранить</string>
    <string name="date_2">дата записи</string>


</resources>